<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu1"
    tools:layout_editor_absoluteX="-9dp"
    tools:layout_editor_absoluteY="100dp">


    <ImageView
        android:id="@+id/imagemenu2"
        android:layout_width="269dp"
        android:layout_height="257dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/menu2bg22"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn2_quiz"
        android:layout_width="251dp"
        android:layout_height="41dp"
        android:background="@drawable/roundstyle"
        android:text="@string/btn_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2_dudi"
        android:layout_width="251dp"
        android:layout_height="41dp"
        android:background="@drawable/roundstyle"
        android:text="@string/btn_daftardudi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2_prakerin"
        android:layout_width="251dp"
        android:layout_height="41dp"
        android:background="@drawable/roundstyle"
        android:text="@string/btn_prakerin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2_gallery"
        android:layout_width="251dp"
        android:layout_height="41dp"
        android:background="@drawable/roundstyle"
        android:text="@string/btn_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672"
        tools:ignore="MissingConstraints" />

    <!--    <TextView-->
<!--        android:id="@+id/menu2desk"-->
<!--        android:layout_width="258dp"-->
<!--        android:layout_height="57dp"-->
<!--        android:text="@string/menu2_deskripsi"-->
<!--        android:textColor="#6E6D70"-->
<!--        android:textSize="14sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.496"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.387" />-->

    <Button
        android:id="@+id/btn2_about"
        android:layout_width="97dp"
        android:layout_height="43dp"
        android:background="@drawable/roundstyle"
        android:text="@string/btn_about"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

</androidx.constraintlayout.widget.ConstraintLayout>