<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_about_menu"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_heading"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="ScrollViewSize">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_image"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toTopOf="parent"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="165dp"
                    android:src="@drawable/aboutfoto_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_first_name"
                app:helperText="Nama :"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="14dp"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_image"
                >

                <TextView
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_about"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:background="#00000000"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_last_name"
                android:layout_width="0dp"
                app:helperText="Kampus :"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_first_name"
                >

                <TextView
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/profile_kampus"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:background="#00000000"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="0dp"
                app:helperText="Email :"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_last_name"
                >

                <TextView
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:background="#00000000"
                    android:text="@string/profile_email"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextViewEdits" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_contact_no"
                android:layout_width="0dp"
                app:helperText="Nomor HP :"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHint="#808080"
                app:layout_constraintTop_toBottomOf="@+id/layout_email"
                >

                <TextView
                    android:id="@+id/et_contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#808080"
                    android:background="#00000000"
                    android:text="@string/profile_number"
                    android:textSize="15sp"
                    android:inputType="phone"
                    tools:ignore="TextViewEdits" />
            </com.google.android.material.textfield.TextInputLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="177dp"
        android:layout_height="133dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        app:srcCompat="@drawable/thankyoug79"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>